compiler/testData/diagnostics/tests/regressions/ErrorsOnIbjectExpressionsAsParameters.kt
fun foo(<!UNUSED_PARAMETER!>a<!> : Any) {}

fun test() {
  foo(object {});
}
